--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 PORT=5000
-MONGO_URI=mongodb+srv://Archil:archil1234@cluster0.gl6sb.mongodb.net/userApp
+MONGO_URI=mongodb+srv://Archil:Archil%40135@cluster0.gl6sb.mongodb.net/userApp
 NODE_ENV=development
 JWT_SECRET=archil1355
